# voice-your-work-v2-backend

./: .gitignore  README.md  auth.py  config.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  scratch.py
alembic/: env.py
alembic/versions/: 68085971f6f1_fixed_user_voice_relationship.py  7e0304cbb1c3_inital_schema.py  89ca62c2ea7a_added_voice_clone_table.py  8ae14bcf5f56_fixed_user_model.py
models/Qwen3-TTS-12Hz-0.6B-Base/: README.md  model.safetensors
models/Qwen3-TTS-12Hz-0.6B-CustomVoice/: README.md  model.safetensors
models/Qwen3-TTS-Tokenizer-12Hz/: README.md
routers/: users.py  voices.py
schemas/: auth.py  users.py  voices.py
templates/email/: password_reset.html
utils/: email_utils.py  image_utils.py  sound_utils.py  voice_queue.py
voice_engine/: engine.py  preview.py  queue.py
